--- a/lib/config.json
+++ b/lib/config.json
@@ -1,4 +1,4 @@
 {
     "title": "Ordinal Fomojis",
-    "description": ""
+    "description": "A collection of 100 digital artifacts inscribed as Ordinals on the Bitcoin blockchain"
 }
